--- a/app/package.json
+++ b/app/package.json
@@ -12,25 +12,35 @@
     "@animatereactnative/marquee": "^0.2.0",
     "@expo/vector-icons": "^14.0.2",
     "@fawazahmed/react-native-read-more": "^3.0.3",
-    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.4",
+    "@walletconnect/react-native-compat": "^2.13.0",
+    "@web3modal/wagmi-react-native": "^1.3.0",
     "expo": "~51.0.6",
+    "expo-application": "~5.9.1",
+    "expo-clipboard": "~6.0.3",
     "expo-constants": "^16.0.1",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-get-random-values": "~1.11.0",
+    "react-native-modal": "^13.0.1",
     "react-native-progress": "^5.0.1",
     "react-native-reanimated": "^3.10.0",
     "react-native-safe-area-context": "4.10.1",
     "react-native-screens": "3.31.1",
     "react-native-sheet": "^0.1.6",
+    "react-native-svg": "15.2.0",
     "react-redux": "^9.1.2",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "viem": "1.21.4",
+    "wagmi": "1.4.13"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
