--- a/app/.env
+++ b/app/.env
@@ -1,1 +1,2 @@
-WALLETCONNECT_API_KEY=ALLLWW4N6col8EYo8VeRyfmcB4OjL5oD
+WALLETCONNECT_API_KEY="ALLLWW4N6col8EYo8VeRyfmcB4OjL5oD"
+ALCHEMY_API_KEY="2W7nnlFNFkzlp-n_fPMsltYin6vYuPiJ"
