--- a/app/package.json
+++ b/app/package.json
@@ -15,21 +15,25 @@
     "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/netinfo": "11.3.1",
     "@react-navigation/bottom-tabs": "^6.5.20",
+    "@react-navigation/drawer": "^6.6.15",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/native-stack": "^6.9.26",
     "@reduxjs/toolkit": "^2.2.4",
     "@walletconnect/react-native-compat": "^2.13.0",
     "@web3modal/wagmi-react-native": "^1.3.0",
     "alchemy-sdk": "^3.3.1",
+    "axios": "^1.7.2",
     "expo": "~51.0.8",
     "expo-application": "~5.9.1",
     "expo-clipboard": "~6.0.3",
     "expo-constants": "^16.0.1",
+    "expo-image-picker": "~15.0.5",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
     "react-native-get-random-values": "~1.11.0",
     "react-native-modal": "^13.0.1",
     "react-native-progress": "^5.0.1",
@@ -38,6 +42,7 @@
     "react-native-screens": "3.31.1",
     "react-native-sheet": "^0.1.6",
     "react-native-svg": "15.2.0",
+    "react-native-toast-notifications": "^3.4.0",
     "react-redux": "^9.1.2",
     "redux-persist": "^6.0.0",
     "viem": "1.21.4",
