--- a/app/package.json
+++ b/app/package.json
@@ -30,6 +30,7 @@
     "expo-image-picker": "~15.0.5",
     "expo-linear-gradient": "~13.0.2",
     "expo-status-bar": "~1.12.1",
+    "expo-updates": "~0.25.15",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.74.1",
